--- a/poi/pom.xml
+++ b/poi/pom.xml
@@ -6,16 +6,25 @@
 	<artifactId>poi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+		<org.apache.poi.version>3.9</org.apache.poi.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>3.9</version>
+			<version>${org.apache.poi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-examples</artifactId>
-			<version>3.9</version>
+			<version>${org.apache.poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-excelant</artifactId>
+			<version>${org.apache.poi.version}</version>
 		</dependency>
 	</dependencies>
 </project>
