--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ target
 /nda-tools/src/test/java/org/jdesktop/xswingx/plaf/.svn
 /nda-tools/src/test/java/org/jdesktop/xswingx/.svn
 /nda-tools/src/test/java/org/jdesktop/.svn
+/android/bin
